Solution to MNIST using 5 layer LeNet

--- a/LeNet-Lab.ipynb
+++ b/LeNet-Lab.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# LeNet Lab\n",
     "![LeNet Architecture](lenet.png)\n",
@@ -11,7 +14,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Load Data\n",
     "\n",
@@ -22,11 +28,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "\n",
+      "Image Shape: (28, 28, 1)\n",
+      "\n",
+      "Training Set:   55000 samples\n",
+      "Validation Set: 5000 samples\n",
+      "Test Set:       10000 samples\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
@@ -49,7 +78,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The MNIST data that TensorFlow pre-loads comes as 28x28x1 images.\n",
     "\n",
@@ -62,11 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Image Shape: (32, 32, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -80,7 +122,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Visualize Data\n",
     "\n",
@@ -91,11 +136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFsAAABZCAYAAABR/liSAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAABkxJREFUeJztnG1IlWcYx3+XpiU52HS0Dq2cjRVEbwNZ0D4FjWQfmn6Y\nzWJoBEYgbOGH1fyyEqFw80sfDIdCwcgGCQUVMsZYfRoeX3Jrh6MR4tqsZTl0Ur7Max/OS2qWx/Oc\nc5/zHO8fPDznPG/3n/+5uJ7nvp/r3KKqWMyQlmgBSwlrtkGs2QaxZhvEmm0Qa7ZBrNkGcWS2iBSK\niF9E7ojIsViJSlUk2k6NiKQDvcAHwD2gHShV1d9jJy+1WObg3PeAO6p6F0BEWoCPgBeaLSIp211V\nVVnoGCdpZA3wx4zv94LbZiEiFSLiFRGvg7ZSAieRPd8v+Vzkqmoj0AipHdmR4CSy7wFrZ3x/E/jL\nmZzUxonZ7cA7IpIvIpnAJ8CV2MhKTaJOI6o6JSKVQBuQDjSr6u2YKUtBon70i6qxFM7Z8X4asSwS\na7ZBUsrsvLw88vLyqKmpwefz4fP5UNVZi9frJTc3l9zcXOP6XJ+z09LS2LRpEwBtbW0AeDye8P6p\nqalQ2wCkp6dz8eJFAEpLS2Omw+bsJMP1kX38+HFqa2tnbevq6qK+vh4Av98PwObNmwFobm7m/v37\nAGzZsgWAR48eOdZhIzvJcDI2klB27doFwMmTJ8PbLly4AMChQ4d4+vTprOOHhoYAePz4MatXrwZg\n5cqVQGwiOxJcZ3ZmZiYAhw8fBgI3vJaWFgDKy8sBmJycfO68/v5+AB4+fEhOTk78hc6DTSMGcV1k\nHzlyBICSkhIAent7OXjwIDB/RM/F6/WyceNGgPB6YGAgHlKfw0a2QVxndlZWFllZWeHvNTU1jI+P\nMz4+HtH53d3d4c9+vz/8aGgC15ntZlyXs8vKyoBARMOzxz034DqzMzIyAFizJvBueXp6OpFyFoVN\nIwZxXWTv27cPgFWrVkV9jdHRUQAmJiZioilSbGQbxPWjfovl5s2bjI2NAVBYWBiz60Yy6ue6NBIt\nGzZsAALDqqdPn06IBptGDLJkIjt0Q12xYgVXr15NiAYb2QZZMpG9e/duAJ48eUJPT09CNCwY2SKy\nVkR+EhGfiNwWkc+C23NE5AcR6QuuX4u/XHcTSWRPAVWq2ikirwAdIvIDUA78qKqngn/xOAZ8ET+p\nAdLSAvERerW1f//+WaOAEChbaGpqAqC4uBiAqqoqANrb2+Mt8cXMLWJZaAEuE/hrhx/wBLd5AH8E\n56rTpbq6Wqurq3V6ejqqpa6uzrGG+ZZIvFtUzhaRt4B3gV+AN1R1MPiDDYrIvP1nEakAKhbTTqoS\ncQ9SRLKBn4FaVW0VkX9U9dUZ+4dV9aV520kP8ujRowDU1dUB0NfXB8C5c+e4fv06ABUVgd809Ops\nTttA4AbZ29sLQGtrKwCNjY0A4XqSaIhZ3YiIZACXgO9UtTW4+YGIeIL7PcDf0QpdKiyYRiQQEk2A\nT1XrZ+y6ApQBp4Lry3FRGKSgoAB4doMMdUzOnDnD3r17AdizZ0/4+OHhYQCuXbsGwM6dOwHIz89n\n69atAGzbtg2AysrK8LVCLyXiQSQ5+33gU+BXEQm9wPuSgMnfi8ghYAD4OD4SUwfXjPqFyhUaGhoA\nWLYsECeTk5MsX7581rF3794Nlzp0dnYCsG7dOgDWr19PdnY28Gxs/MCBA0DgySxUaXXjxo1F6Ysk\nZ7vG7BChm+DZs2cB6OjooKurC4Dz588DcOvWrfALgpcRqq4qKioCYMeOHZw4cQKAkZGRRemyhZVJ\nhusiO1mxkZ1kWLMNYs02iDXbINZsg1izDWLNNog12yDWbINYsw1izTaI6bqRIWAsuE52XidynXmR\nHGR0IApARLyqWmC00SiIh06bRgxizTZIIsxuTECb0RBzncZz9lLGphGDGDM7mefafkml7lci8qeI\ndAeXDx21YyKNJPtc28GKLs/MSl2gCCgB/lXVr2PRjqnIDs+1raoTQGiu7aRAVQdVtTP4eRTwMc/0\n1E4xZXZEc20nA3MqdQEqRaRHRJqdFvybMjuiubYTTbBS9xLwuaqOAA3A28B2YBD4xsn1TZmd9HNt\nz1epq6oPVPU/VZ0GviWQDqPGlNlJPdf2iyp1QyXRQYqB35y0Y2TUzwVzbb+oUrdURLYTSHn9wGEn\njdgepEFsD9Ig1myDWLMNYs02iDXbINZsg1izDWLNNsj/7OPVO/fwMZkAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fbc0f378320>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -112,7 +177,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Preprocess Data\n",
     "\n",
@@ -123,9 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -136,7 +206,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Setup TensorFlow\n",
     "The `EPOCH` and `BATCH_SIZE` values affect the training speed and model accuracy.\n",
@@ -146,9 +219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -160,7 +235,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## TODO: Implement LeNet-5\n",
     "Implement the [LeNet-5](http://yann.lecun.com/exdb/lenet/) neural network architecture.\n",
@@ -200,9 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -212,37 +292,75 @@
     "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "    mu = 0\n",
     "    sigma = 0.1\n",
+    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    f_w_layer1 = tf.Variable(tf.truncated_normal([5,5,1,6], mu, sigma, dtype=tf.float32))\n",
+    "    f_bias_layer1 = tf.Variable(tf.truncated_normal([6]))\n",
+    "    strides_layer1 = [1,1,1,1]\n",
+    "    pad_layer1 = \"VALID\"\n",
     "    \n",
-    "    # TODO: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    layer1 = tf.nn.conv2d(x, f_w_layer1, strides_layer1, pad_layer1)\n",
+    "    layer1 = tf.nn.bias_add(layer1, f_bias_layer1)\n",
+    "    # Activation (RELU)\n",
+    "    layer1 = tf.nn.relu(layer1)\n",
     "\n",
-    "    # TODO: Activation.\n",
-    "\n",
-    "    # TODO: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
-    "\n",
-    "    # TODO: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    # Average Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    pool_ksize_layer1 = [1,2,2,1]\n",
+    "    pool_strides_layer1 = [1,2,2,1]\n",
+    "    layer1 = tf.nn.avg_pool(layer1, pool_ksize_layer1, pool_strides_layer1, pad_layer1)\n",
     "    \n",
-    "    # TODO: Activation.\n",
-    "\n",
-    "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
-    "\n",
-    "    # TODO: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    # Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    f_w_layer2 = tf.Variable(tf.truncated_normal([5,5,6,16], mu, sigma, tf.float32))\n",
+    "    f_bias_layer2 = tf.Variable(tf.truncated_normal([16]))\n",
+    "    strides_layer2 = [1,1,1,1]\n",
+    "    pad_layer2 = \"VALID\"\n",
     "    \n",
-    "    # TODO: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    layer2 = tf.nn.conv2d(layer1, f_w_layer2, strides_layer2, pad_layer2)\n",
+    "    layer2 = tf.nn.bias_add(layer2, f_bias_layer2)\n",
     "    \n",
-    "    # TODO: Activation.\n",
+    "    # Activation. (RELU)\n",
+    "    layer2 = tf.nn.relu(layer2)\n",
     "\n",
-    "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    pool_ksize_layer2 = [1,2,2,1]\n",
+    "    pool_strides_layer2 = [1,2,2,1]\n",
+    "    layer2 = tf.nn.avg_pool(layer2, pool_ksize_layer2, pool_strides_layer2, pad_layer2)\n",
+    "\n",
+    "    # Flatten. Input = 5x5x16. Output = 400.\n",
+    "    layer2 = tf.contrib.layers.flatten(layer2)\n",
     "    \n",
-    "    # TODO: Activation.\n",
+    "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    w_layer3 = tf.Variable(tf.truncated_normal([400,120], mu, sigma, tf.float32))\n",
+    "    bias_layer3 = tf.Variable(tf.truncated_normal([120]))\n",
+    "    \n",
+    "    layer3 = tf.add(tf.matmul(layer2, w_layer3), bias_layer3)\n",
+    "    \n",
+    "    # Activation.\n",
+    "    layer3 = tf.nn.relu(layer3)\n",
     "\n",
-    "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    w_layer4 = tf.Variable(tf.truncated_normal([120,84], mu, sigma, tf.float32))\n",
+    "    bias_layer4 = tf.Variable(tf.truncated_normal([84]))\n",
+    "    \n",
+    "    layer4 = tf.add(tf.matmul(layer3, w_layer4), bias_layer4)\n",
+    "    \n",
+    "    # Activation.\n",
+    "    layer4 = tf.nn.relu(layer4)\n",
+    "\n",
+    "    # Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    w_layer5 = tf.Variable(tf.truncated_normal([84,10], mu, sigma, tf.float32))\n",
+    "    bias_layer5 = tf.Variable(tf.truncated_normal([10]))\n",
+    "    \n",
+    "    logits = tf.add(tf.matmul(layer4, w_layer5), bias_layer5)\n",
     "    \n",
     "    return logits"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Features and Labels\n",
     "Train LeNet to classify [MNIST](http://yann.lecun.com/exdb/mnist/) data.\n",
@@ -255,9 +373,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -268,7 +388,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Training Pipeline\n",
     "Create a training pipeline that uses the model to classify MNIST data.\n",
@@ -278,9 +401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -295,7 +420,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Model Evaluation\n",
     "Evaluate how well the loss and accuracy of the model for a given dataset.\n",
@@ -305,9 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -328,7 +458,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Train the Model\n",
     "Run the training data through the training pipeline to train the model.\n",
@@ -344,11 +477,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.941\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.970\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.974\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.978\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.984\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
@@ -374,7 +549,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Evaluate the Model\n",
     "Once you are completely satisfied with your model, evaluate the performance of the model on the test set.\n",
@@ -388,11 +566,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy = 0.986\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
@@ -400,6 +588,15 @@
     "    test_accuracy = evaluate(X_test, y_test)\n",
     "    print(\"Test Accuracy = {:.3f}\".format(test_accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
